# minilibx-qdrant-search-engine

./: .env.example  .gitignore  Makefile  README.md  capstone.ipynb  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: assist_agent.py  full_agent.py
backend/app/services/: qdrant.py
frontend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: MyRuntimeProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/components/ai/: AiModeView.tsx  CitationLink.tsx  FollowUpChips.tsx
frontend/components/ai/generative-ui/: ApiReferenceCard.tsx  CodeExample.tsx  DocsCard.tsx
frontend/components/assistant-ui/: thread.tsx
frontend/components/layout/: AppLayout.tsx  ModeTabs.tsx
frontend/components/panel/: DocViewer.tsx  SidePanel.tsx
frontend/components/search/: ExpandingSearchPanel.tsx  ResultCard.tsx  ResultsPage.tsx  ResultsView.tsx  SearchAssist.tsx  SearchBar.tsx  SuggestionChips.tsx  WelcomeScreen.tsx  WelcomeView.tsx
frontend/components/shared/: MarkdownRenderer.tsx
