[project]
name = "42-minilibx-qdrant-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-langgraph[fastapi]>=0.0.35",
    "fastapi>=0.115.12",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.3.25",
    "llama-index-core>=0.14.22",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "qdrant-client[fastembed]>=1.18.0",
    "uvicorn>=0.34.0",
]
